# format-dedent

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  PRE_COMMIT_SETUP.md  README.md  demo.py  example-pre-commit-config.yaml  example.py  pyproject.toml
src/format_dedent/: __init__.py  __main__.py  ast_helpers.py  cli.py  formatter.py
tests/: test_cli.py  test_formatter.py
