[project]
name = "format-dedent"
version = "0.1.1"
description = "Format only the literal string arguments of textwrap.dedent() calls"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
license = "MIT"
keywords = ["formatter", "textwrap", "dedent", "pre-commit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
format-dedent = "format_dedent.cli:main"

[dependency-groups]
dev = [
    "inline-snapshot[black]>=0.31.1",
    "pytest>=8.3.5",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = {find = {where = ["src"]}}

[tool.pytest.ini_options]
testpaths = ["tests", "."]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
